--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <!-- comentario-->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
