--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://prueba-aws-descartes.c3kb4ngzvtw6.us-east-2.rds.amazonaws.com:3306/uDescartes_API?useSSL=true
+spring.datasource.username=descartes
+spring.datasource.password= unamApi#
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-
-spring.datasource.url= jdbc:mysql://localhost:3306/uDescartes_API
-spring.datasource.username= root
-spring.datasource.password= qwerty123456
-
-spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform= org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto= update
-spring.jpa.show-sql= true
-
-#Dehabilitar las consultas a la BD durante la renderización de la vista.
-spring.jpa.open-in-view=false
+logging.level.org.hibernate.SQL= debug
+server.port= 5000
