--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.datasource.url=jdbc:mysql://prueba-aws-descartes.c3kb4ngzvtw6.us-east-2.r
 spring.datasource.username=descartes
 spring.datasource.password= unamApi#
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform= org.hibernate.dialect.MySQL57Dialect
+spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto= update
 logging.level.org.hibernate.SQL= debug
-server.port= 5000
+spring.jpa.open-in-view=false
+#server.port= 5000
