--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://prueba-aws-descartes.c3kb4ngzvtw6.us-east-2.rds.amazonaws.com:3306/uDescartes_API?useSSL=true
-spring.datasource.username=descartes
-spring.datasource.password= unamApi#
+spring.datasource.url= jdbc:mysql://localhost:3306/uDescartes_API
+spring.datasource.username= root
+spring.datasource.password= qwerty123456
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto= update
